--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "react-xstate-js": "^2.2.0",
     "styled-components": "^4.2.0",
+    "validator": "^10.11.0",
     "xstate": "^4.3.3"
   },
   "scripts": {
